--- a/splunk/overlays/dev/kustomization.yaml
+++ b/splunk/overlays/dev/kustomization.yaml
@@ -24,3 +24,10 @@ patches:
       - op: replace
         path: /spec/ports/0/targetPort
         value: 8000
+  - target:
+      kind: StatefulSet
+      name: splunk
+    patch: |
+      - op: replace
+        path: /spec/replicas
+        value: 2
